Update news section description in index.html
This is a test of the description system built by GPT

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         let articles = {
             news: {
                 title: "News & Features",
-                description: "The latest happenings around the school, from campus events to staff profiles.",
+                description: "Test Description",
                 category: "Section",
                 image: "https://placehold.co/600x400/003057/ffffff?text=NEWS",
                 content: `
