--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
                 image: "https://placehold.co/600x400/003057/9BCBEB?text=JOIN+US",
                 content: `
                     <p class="text-lg font-bold text-navy mb-4">Are you interested in being on the Newspaper staff?</p>
-                    <p class="mb-6">We are still looking for dedicated **writing staff and photographers** to help us cover all the exciting events and student voices at the school!</p>
+                    <p class="mb-6">We are still looking for dedicated <span class="font-bold">writing staff and photographers</span> to help us cover all the exciting events and student voices at the school!</p>
 
                     <h4 class="text-xl font-primary font-bold text-navy mb-2">Newspaper Staff</h4>
                     <ul class="list-disc pl-5 space-y-2 mb-6">
-                        <li><strong>Faculty Advisors:</strong> Mrs. Howlin and Ms. McGill</li>
+                        <li><strong>Faculty Advisors:</strong> Mrs. Silberman and Ms. McGill</li>
                         <li><strong>Editors-in-Chief:</strong> Ellen Le and Sara Adibi</li>
                         <li><strong>Content Editor:</strong> [Content Editor Name TBD]</li>
                     </ul>
@@ -228,7 +228,7 @@
                     <p class="text-base">
                         Reach out to <span class="font-bold">Ms. McGill</span> at 
                         <a href="mailto:mmcgill@episcopalacademy.org" class="text-light-blue hover:text-navy font-semibold underline">mmcgill@episcopalacademy.org</a> 
-                        or **Ellen Le** for more information and to find out how you can contribute.
+                        or <span class="font-bold">Ellen Le</span> at <a href="mailto:lee30@episcopalacademy.org" class="text-light-blue hover:text-navy font-semibold underline">lee30@episcopalacademy.org</a> for more information and to find out how you can contribute.
                     </p>
                 `,
                 author: ""
