--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 
     <!-- Main Content Grid - Adjusted to lg:grid-cols-3 for better visual balance with 5 items -->
-    <main id="article-grid" class="grid gap-6 justify-center text-center md:grid-cols-2 lg:grid-cols-3 place-items-center">
+    <main id="article-grid" class="grid gap-6 md:grid-cols-2 lg:grid-cols-3 justify-center mx-auto max-w-7xl">
         <!-- Sections will be generated here by JavaScript -->
         <p id="loading-message" class="col-span-full text-center text-gray-500">Loading articles...</p>
     </main>
