Update images for various sections in index.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 title: "Fun & Games",
                 description: "The place for puzzles, riddles, polls, and more!",
                 category: "Section",
-                image: "https://placehold.co/600x400/9BCBEB/003057?text=OPINION",
+                image: "https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/CrosswordUSA.svg/1200px-CrosswordUSA.svg.png",
                 content: `
                     <p class="mb-4">The <strong>Fun & Games</strong> section is where all of the games made by our staff go! This may include word searches, crosswords, fun facts, and more! In addition, polls from the EA community will be paced here. Does everyone agree?</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
@@ -181,7 +181,7 @@
                 title: "Sports & Athletics",
                 description: "Scores, team highlights, and spotlights on middle school athletes across all seasonal sports.",
                 category: "Section",
-                image: "https://placehold.co/600x400/003057/ffffff?text=SPORTS",
+                image: "https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg",
                 content: `
                     <p class="mb-4">Welcome to the <strong>Sports & Athletics</strong> hub. We provide full game recaps, coach interviews, and look ahead at upcoming match-ups.</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
@@ -197,7 +197,7 @@
                 title: "Arts & Culture",
                 description: "Coverage of theater productions, art shows, band concerts, and creative student work.",
                 category: "Section",
-                image: "https://placehold.co/600x400/9BCBEB/003057?text=ARTS",
+                image: "https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg",
                 content: `
                     <p class="mb-4">The <strong>Arts & Culture</strong> section celebrates creativity! Find reviews, interviews, and features on student artists, musicians, and performers.</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
@@ -213,7 +213,7 @@
                 title: "Join the Staff!",
                 description: "Are you interested in writing, photography, or editing? See how you can get involved!",
                 category: "Opportunity",
-                image: "https://placehold.co/600x400/003057/9BCBEB?text=JOIN+US",
+                image: "https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg",
                 content: `
                     <p class="text-lg font-bold text-navy mb-4">Are you interested in being on the Newspaper staff?</p>
                     <p class="mb-6">We are still looking for dedicated <span class="font-bold">writing staff and photographers</span> to help us cover all the exciting events and student voices at the school!</p>
