Update images for athletics and arts sections

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 title: "Sports & Athletics",
                 description: "Scores, team highlights, and spotlights on middle school athletes across all seasonal sports.",
                 category: "Section",
-                image: "https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg",
+                image: "https://resources.finalsite.net/images/f_auto,q_auto,t_image_size_6/v1747664955/episcopalacademypa/m2tmbt97ckopdavsuhx2/athlanding1.jpg",
                 content: `
                     <p class="mb-4">Welcome to the <strong>Sports & Athletics</strong> hub. We provide full game recaps, coach interviews, and look ahead at upcoming match-ups.</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
@@ -197,7 +197,7 @@
                 title: "Arts & Culture",
                 description: "Coverage of theater productions, art shows, band concerts, and creative student work.",
                 category: "Section",
-                image: "https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg",
+                image: "https://resources.finalsite.net/images/f_auto,q_auto,t_image_size_6/v1747664950/episcopalacademypa/c19kays4aib1z3aoljip/artscccg.jpg",
                 content: `
                     <p class="mb-4">The <strong>Arts & Culture</strong> section celebrates creativity! Find reviews, interviews, and features on student artists, musicians, and performers.</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
