--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
                     <h4 class="text-xl font-primary font-bold text-navy mb-2">Newspaper Staff</h4>
                     <ul class="list-disc pl-5 space-y-2 mb-6">
-                        <li><strong>Faculty Advisors:</strong> Mrs. Silberman and Ms. McGill</li>
+                        <li><strong>Faculty Advisors:</strong> Ms. Silberman and Ms. McGill</li>
                         <li><strong>Editors-in-Chief:</strong> Ellen Le and Sara Adibi</li>
                         <li><strong>Content Editors:</strong> Leo Wang and Victor Tsai</li>
                     </ul>
