Update news items in index.html

--- a/index.html
+++ b/index.html
@@ -154,9 +154,11 @@
                     <p class="mb-4">This is the <strong>News & Features</strong> section. Here, we cover major school announcements, student achievements, and deep-dive features into campus life. The council corner is also hosted here, where all of the latest StuCo activities are posted!</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
-                        <li>New Robotics Club Takes Flight</li>
-                        <li>Student Council Election Results Announced</li>
-                        <li>Interview with Principal Smith</li>
+                        <li>Spirit Week</li>
+                        <li>Harvest Day</li>
+                        <li>Echo Hill/Washington D.C.</li>
+                        <li>Council Corner</li>
+                        <li>Game Night</li>
                     </ul>
                 `,
                 author: ""
