Update content in Fun & Games section

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
                     <p class="mb-4">The <strong>Fun & Games</strong> section is where all of the games made by our staff go! This may include word searches, crosswords, fun facts, and more! In addition, polls from the EA community will be paced here. Does everyone agree?</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
-                        <li>Fall Polls - Favorite Song, Holiday, and Fall Food!</li>
-                        <li>Crossword</li>
-                        <li>[PLACEHOLDER]</li>
+                        <li>Fall Polls - Favorite Lunch, Snack, Trends, and Class!</li>
+                        <li>Crossword/Wordsearch and other puzzles</li>
+                        <li>Halloween</li>
                     </ul>
                 `,
                 author: ""
