Update content in index.html for sports and arts sections

--- a/index.html
+++ b/index.html
@@ -188,9 +188,11 @@
                     <p class="mb-4">Welcome to the <strong>Sports & Athletics</strong> hub. We provide full game recaps, coach interviews, and look ahead at upcoming match-ups.</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
-                        <li>Fall Sports Recap: Dominant Soccer Season</li>
-                        <li>Meet the Captain: Field Hockey Star</li>
-                        <li>Basketball Tryouts Schedule</li>
+                        <li>Fall Sports and Season Overview</li>
+                        <li>MS Girls Tennis Team</li>
+                        <li>Girls Volleyball</li>
+                        <li>Girls Soccer Team</li>
+                        <li>AIS/Haverford Day</li>
                     </ul>
                 `,
                 author: ""
@@ -204,9 +206,11 @@
                     <p class="mb-4">The <strong>Arts & Culture</strong> section celebrates creativity! Find reviews, interviews, and features on student artists, musicians, and performers.</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
-                        <li>Behind the Scenes: The Fall Play</li>
-                        <li>Art Room Spotlight: Ceramics</li>
+                        <li>Newsies - The Fall Musical</li>
+                        <li>Jazz Band/Symphonic Band</li>
                         <li>Student Band Review</li>
+                        <li>MS Singers</li>
+                        
                     </ul>
                 `,
                 author: ""
