Add styles for article card and tooltip
This is a patch for an error from tooltip beta test

--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
   visibility: visible;
   opacity: 1;
 }
+        .article-card {
+  overflow: visible !important;
+  position: relative;
+  z-index: 1;
+}
+.tooltip .tooltiptext {
+  z-index: 9999;
+}
     </style>
 </head>
 <body class="antialiased p-4 sm:p-8">
