--- a/index.html
+++ b/index.html
@@ -59,40 +59,36 @@
             transform: translateY(-4px);
             box-shadow: 0 10px 15px -3px rgba(0, 48, 87, 0.1), 0 4px 6px -2px rgba(0, 48, 87, 0.05);
         }
-        .tooltip {
-  position: relative;
-  cursor: help;
-}
-
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 220px;
+        /* Floating tooltip (document-level) */
+.tooltip-floating {
+  position: fixed;
   background-color: var(--color-navy);
   color: #fff;
-  text-align: center;
+  padding: 8px 10px;
   border-radius: 8px;
-  padding: 6px 8px;
-  position: absolute;
-  z-index: 10;
-  bottom: 125%; /* positions above text */
-  left: 50%;
-  transform: translateX(-50%);
+  font-size: 0.9rem;
+  line-height: 1.2;
+  z-index: 99999;
+  pointer-events: none;
+  max-width: 320px;
+  text-align: left;
+  transform: translate(-50%, -120%);
   opacity: 0;
-  transition: opacity 0.25s;
+  transition: opacity 0.18s ease, transform 0.18s ease;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.18);
 }
 
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
+.tooltip-floating::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -6px;
+  border-width: 6px;
+  border-style: solid;
+  border-color: var(--color-navy) transparent transparent transparent;
 }
-        .article-card {
-  overflow: visible !important;
-  position: relative;
-  z-index: 1;
-}
-.tooltip .tooltiptext {
-  z-index: 9999;
-}
+        
     </style>
 </head>
 <body class="antialiased p-4 sm:p-8">
@@ -177,6 +173,67 @@
     </div>
 
     <script>
+        // Floating tooltip script
+(function() {
+  const floatTip = document.createElement('div');
+  floatTip.className = 'tooltip-floating';
+  document.body.appendChild(floatTip);
+
+  let activeTarget = null;
+  let hideTimeout = null;
+
+  function showTip(target, html) {
+    if (!html) return;
+    activeTarget = target;
+    floatTip.innerHTML = html;
+    floatTip.style.opacity = '1';
+    floatTip.style.transform = 'translate(-50%, -120%)';
+    positionTipOverElement(target);
+  }
+
+  function hideTip() {
+    activeTarget = null;
+    floatTip.style.opacity = '0';
+    clearTimeout(hideTimeout);
+    hideTimeout = setTimeout(() => { floatTip.innerHTML = ''; }, 220);
+  }
+
+  function positionTipOverElement(target) {
+    if (!target) return;
+    const rect = target.getBoundingClientRect();
+    const x = rect.left + rect.width / 2;
+    let y = rect.top - 10;
+    if (y - 60 < 0) y = rect.bottom + 10;
+    floatTip.style.left = `${x}px`;
+    floatTip.style.top = `${y}px`;
+  }
+
+  window.addEventListener('scroll', () => {
+    if (activeTarget) positionTipOverElement(activeTarget);
+  }, { passive: true });
+  window.addEventListener('resize', () => {
+    if (activeTarget) positionTipOverElement(activeTarget);
+  });
+
+  document.body.addEventListener('pointerenter', (e) => {
+    const t = e.target.closest('.tooltip');
+    if (!t) return;
+    const tt = t.querySelector('.tooltiptext');
+    if (!tt) return;
+    showTip(t, tt.innerHTML);
+  }, true);
+
+  document.body.addEventListener('pointerleave', (e) => {
+    const t = e.target.closest('.tooltip');
+    if (!t) return;
+    hideTip();
+  }, true);
+
+  document.body.addEventListener('pointermove', (e) => {
+    if (!activeTarget) return;
+    positionTipOverElement(activeTarget);
+  });
+})();
         // Default Section Data - COLLABORATORS WILL EDIT THIS BLOCK
         let articles = {
             news: {
