--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
   border-style: solid;
   border-color: var(--color-navy) transparent transparent transparent;
 }
+        .tooltip .tooltiptext {
+  display: none;
+}
         
     </style>
 </head>
