--- a/index.html
+++ b/index.html
@@ -250,13 +250,29 @@
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
             <span class="tooltip">Spirit Week
-                <span class="tooltiptext">A week of different-themed dressdown days! Authors: <i>Liv, Alana, Peyton, and Sara.</i></span>
+                <span class="tooltiptext">A week of different-themed dressdown days! Authors: <i>Liv, Alana, Peyton, Sara</i></span>
             </span>
         </li>
-                        <li>Harvest Day</li>
-                        <li>Echo Hill/Washington D.C.</li>
-                        <li>Council Corner</li>
-                        <li>Game Night</li>
+                        <li>
+            <span class="tooltip">Harvest Day
+                <span class="tooltiptext">An LS tradition with games, prizes, and all-around fun! Authors: <i>Remy, Everly, Annie, Katie</i></span>
+            </span>
+        </li>
+                        <li>
+            <span class="tooltip">8th Grade Washington D.C. Trip
+                <span class="tooltiptext">All about the Washington D.C. Trip! Authors: <i>Adam, Leo, Zach, Ellen</i></span>
+            </span>
+        </li>
+                       <li>
+            <span class="tooltip">The Council Corner
+                <span class="tooltiptext">The hottest news from the Student Council! Authors: <i>Gus, Ellen</i></span>
+            </span>
+        </li>
+                        <li>
+            <span class="tooltip">StuCo Game Night
+                <span class="tooltiptext">A night of fun games from the Student Council. Authors: <i>Sara Adibi</i></span>
+            </span>
+        </li>
                     </ul>
                 `,
                 author: ""
