Added tts to ALL SECTIONS
major overhaul after bugfix and update

--- a/index.html
+++ b/index.html
@@ -312,9 +312,21 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="mb-4">The <strong>Fun & Games</strong> section is where all of the games made by our staff go! This may include word searches, crosswords, fun facts, and more! In addition, polls from the EA community will be paced here. Does everyone agree?</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
-                        <li>Fall Polls - Favorite Lunch, Snack, Trends, and Class!</li>
-                        <li>Crossword/Wordsearch and other puzzles</li>
-                        <li>Halloween</li>
+                        <li>
+            <span class="tooltip">Fall Polls - Favorite Lunch, Snack, Trends, and Class!
+                <span class="tooltiptext">A mix of polls on the Middle School! Authors: <i>Various (A lot!)</i></span>
+            </span>
+        </li>
+                        <li>
+            <span class="tooltip">Crossword/Wordsearch and other Puzzles
+                <span class="tooltiptext">Various puzzles created by our staff! Made by: <i>Sunishka</i></span>
+            </span>
+        </li>
+                        <li>
+            <span class="tooltip">Halloween
+                <span class="tooltiptext">Tricks, treats, and costumes! Authors: <i>Remy, Izzy, Katie, Everly</i></span>
+            </span>
+        </li>
                     </ul>
                 `,
                 author: ""
@@ -328,11 +340,31 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="mb-4">Welcome to the <strong>Sports & Athletics</strong> hub. We provide full game recaps, coach interviews, and look ahead at upcoming match-ups.</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
-                        <li>Fall Sports and Season Overview</li>
-                        <li>MS Girls Tennis Team</li>
-                        <li>Girls Volleyball</li>
-                        <li>Girls Soccer Team</li>
-                        <li>AIS/Haverford Day</li>
+                        <li>
+            <span class="tooltip">Fall Sports Season Overview
+                <span class="tooltiptext">A summary of the EAMS Fall Athletics! Authors: <i>Emme, Maya, Gus</i></span>
+            </span>
+        </li>
+                        <li>
+            <span class="tooltip">MS Girls Tennis (Team Spotlight)
+                <span class="tooltiptext">A dive into the MS Girls Tennis team. Authors: <i>Grace, Campbell, Ava, Florrie</i></span>
+            </span>
+        </li>
+                        <li>
+            <span class="tooltip">Girls Volleyball (Team Spotlight)
+                <span class="tooltiptext">All about this year's Girls Volleyball team. Authors: <i>Sunishka, Ellie</i></span>
+            </span>
+        </li>
+                        <li>
+            <span class="tooltip">Girls Soccer (Team Spotlight)
+                <span class="tooltiptext">Everything there is to know about the Girls Soccer team! Authors: <i>Everly, Annie, Katie, Izzy</i></span>
+            </span>
+        </li>
+                        <li>
+            <span class="tooltip">AIS/Haverford Day
+                <span class="tooltiptext">Everything there is to know about the Girls Soccer team! Authors: <i>Ava, Asha</i></span>
+            </span>
+        </li>
                     </ul>
                 `,
                 author: ""
@@ -346,10 +378,26 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="mb-4">The <strong>Arts & Culture</strong> section celebrates creativity! Find reviews, interviews, and features on student artists, musicians, and performers.</p>
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
-                        <li>Newsies - The Fall Musical</li>
-                        <li>Jazz Band/Symphonic Band</li>
-                        <li>Student Band Review</li>
-                        <li>MS Singers</li>
+                       <li>
+            <span class="tooltip">Newsies - The Fall Musical
+                <span class="tooltiptext">The MS Fall Musical; here's what you need to know! Authors: <i>Remy, Ellie</i></span>
+            </span>
+        </li>
+                        <li>
+            <span class="tooltip">Jazz Band
+                <span class="tooltiptext">An overview of the MS Jazz Band. Author <i>Leo Wang</i></span>
+            </span>
+        </li>
+                        <li>
+            <span class="tooltip">Symphonic Band
+                <span class="tooltiptext">The Symphonic band and everything about it. Authors: <i>Adam, Leo, Zach, Ellen</i></span>
+            </span>
+        </li>
+                        <li>
+            <span class="tooltip">MS Singers
+                <span class="tooltiptext">A summary of the MS Singers. What will they perform? Authors: <i>Grace, Florrie</i></span>
+            </span>
+        </li>
                         
                     </ul>
                 `,
