--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
         <div class="mt-4 flex flex-col sm:flex-row justify-end space-y-3 sm:space-y-0 sm:space-x-4">
             <button onclick="loadArticles(true)" 
                     class="bg-navy text-white hover:bg-navy/90 font-semibold py-3 px-6 rounded-lg transition-colors shadow-lg">
-                Update Live Preview - This is WIP. -VT
+                Update Live Preview
             </button>
             <button onclick="generateCodeSnippet()" 
                     class="bg-green-500 text-white hover:bg-green-600 font-semibold py-3 px-6 rounded-lg transition-colors shadow-lg">
-                Copy New Source Code to Clipboard - This is WIP. -VT
+                Copy New Source Code to Clipboard
             </button>
         </div>
 
@@ -175,7 +175,7 @@
                 <!-- Content will be injected here -->
             </div>
             <div class="mt-6 pt-4 border-t border-gray-200">
-                 <p class="text-sm text-gray-600 font-semibold">This is a placeholder footer; buttons will be placed soon to navigate the site. - VT</p>
+                 <p class="text-sm text-gray-600 font-semibold">Hover over an article to preview it. Click on it to navigate directly to the article.</p>
             </div>
         </div>
     </div>
