echo hill trip addition

--- a/index.html
+++ b/index.html
@@ -299,6 +299,11 @@ document.body.addEventListener('pointerleave', (e) => {
                 <span class="tooltiptext">A night of fun games from the Student Council. Authors: <i>Sara Adibi</i></span>
             </span>
         </li>
+                        <li>
+            <span class="tooltip">7th Grade Echo Hill Trip
+                <span class="tooltiptext">All about the 7th Grade Echo Hill Trip. Authors: <i>Sara Adibi</i></span>
+            </span>
+        </li>
                     </ul>
                 `,
                 author: ""
