Update staff roles with graduation years

--- a/index.html
+++ b/index.html
@@ -420,8 +420,8 @@ document.body.addEventListener('pointerleave', (e) => {
                     <h4 class="text-xl font-primary font-bold text-navy mb-2">《 Head Newspaper Staff 》</h4>
                     <ul class="list-disc pl-5 space-y-2 mb-6">
                         <li><strong>Faculty Advisors:</strong> Ms. Silberman and Ms. McGill</li>
-                        <li><strong>Editors-in-Chief:</strong> Ellen Le and Sara Adibi</li>
-                        <li><strong>Content Editors:</strong> Leo Wang and Victor Tsai</li>
+                        <li><strong>Editors-in-Chief:</strong> Ellen Le ('30) and Sara Adibi ('31)</li>
+                        <li><strong>Content Editors:</strong> Leo Wang ('30) and Victor Tsai ('30)</li>
                     </ul>
 
                     <p class="text-base">
