Testing "Author" functionality

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ document.body.addEventListener('pointerleave', (e) => {
         </li>
                     </ul>
                 `,
-                author: ""
+                author: "Test Author"
             },
             opinion: {
                 title: "Fun & Games",
