--- a/index.html
+++ b/index.html
@@ -277,38 +277,38 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip">Spirit Week
+            <span class="tooltip"><u><strong>Spirit Week</strong></u>
                 <span class="tooltiptext">A week of different-themed dressdown days! Authors: <i>Liv, Alana, Peyton, Sara</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">Harvest Day
+            <span class="tooltip"><u><strong>Harvest Day</strong></u>
                 <span class="tooltiptext">An LS tradition with games, prizes, and all-around fun! Authors: <i>Remy, Everly, Annie, Katie</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">8th Grade Washington D.C. Trip
+            <span class="tooltip"><u><strong>8th Grade Washington D.C. Trip</strong></u>
                 <span class="tooltiptext">All about the Washington D.C. Trip! Authors: <i>Adam, Leo, Zach, Ellen</i></span>
             </span>
         </li>
                        <li>
-            <span class="tooltip">The Council Corner
+            <span class="tooltip"><u><strong>The Council Corner</strong></u>
                 <span class="tooltiptext">The hottest news from the Student Council! Authors: <i>Gus, Ellen</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">StuCo Game Night
+            <span class="tooltip"><u><strong>StuCo Game Night</strong></u>
                 <span class="tooltiptext">A night of fun games from the Student Council. Authors: <i>Sara Adibi</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">7th Grade Echo Hill Trip
+            <span class="tooltip"><u><strong>7th Grade Echo Hill Trip</strong></u>
                 <span class="tooltiptext">All about the 7th Grade Echo Hill Trip. Authors: <i>Sara Adibi</i></span>
             </span>
         </li>
                     </ul>
                 `,
-                author: "Test Author"
+                author: ""
             },
             opinion: {
                 title: "Fun & Games",
@@ -320,17 +320,17 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip">Fall Polls - Favorite Lunch, Snack, Trends, and Class!
+            <span class="tooltip"><strong><u>Fall Polls - Favorite Lunch, Snack, Trends, and Class!</u></strong>
                 <span class="tooltiptext">A mix of polls on the Middle School! Authors: <i>Various (A lot!)</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">Crossword/Wordsearch and other Puzzles
+            <span class="tooltip"><strong><u>Crossword/Wordsearch and other Puzzles</u></strong>
                 <span class="tooltiptext">Various puzzles created by our staff! Made by: <i>Sunishka</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">Halloween
+            <span class="tooltip"><strong><u>Halloween</u></strong>
                 <span class="tooltiptext">Tricks, treats, and costumes! Authors: <i>Remy, Izzy, Katie, Everly</i></span>
             </span>
         </li>
@@ -348,27 +348,27 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip">Fall Sports Season Overview
+            <span class="tooltip"><strong><u>Fall Sports Season Overview</u></strong>
                 <span class="tooltiptext">A summary of the EAMS Fall Athletics! Authors: <i>Emme, Maya, Gus</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">MS Girls Tennis (Team Spotlight)
+            <span class="tooltip"><strong><u>MS Girls Tennis (Team Spotlight)</u></strong>
                 <span class="tooltiptext">A dive into the MS Girls Tennis team. Authors: <i>Grace, Campbell, Ava, Florrie</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">Girls Volleyball (Team Spotlight)
+            <span class="tooltip"><strong><u>Girls Volleyball (Team Spotlight)</u></strong>
                 <span class="tooltiptext">All about this year's Girls Volleyball team. Authors: <i>Sunishka, Ellie</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">Girls Soccer (Team Spotlight)
+            <span class="tooltip"><strong><u>Girls Soccer (Team Spotlight)</u></strong>
                 <span class="tooltiptext">Everything there is to know about the Girls Soccer team! Authors: <i>Everly, Annie, Katie, Izzy</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">AIS/Haverford Day
+            <span class="tooltip">strong><u>AIS/Haverford Day</u></strong>
                 <span class="tooltiptext">Everything there is to know about the Girls Soccer team! Authors: <i>Ava, Asha</i></span>
             </span>
         </li>
@@ -386,22 +386,22 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                        <li>
-            <span class="tooltip">Newsies - The Fall Musical
+            <span class="tooltip"><strong><u>Newsies - The Fall Musical</u></strong>
                 <span class="tooltiptext">The MS Fall Musical; here's what you need to know! Authors: <i>Remy, Ellie</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">Jazz Band
+            <span class="tooltip"><strong><u>Jazz Band</u></strong>
                 <span class="tooltiptext">An overview of the MS Jazz Band. Author: <i>Leo Wang</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">Symphonic Band
+            <span class="tooltip"><u><strong>Symphonic Band</u></strong>
                 <span class="tooltiptext">The Symphonic band and everything about it. Authors: <i>Adam, Leo, Zach, Ellen</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip">MS Singers
+            <span class="tooltip"><strong><u>MS Singers</u></strong>
                 <span class="tooltiptext">A summary of the MS Singers. What will they perform? Authors: <i>Grace, Florrie</i></span>
             </span>
         </li>
